src/components/App.scss
//rodac colors
$primaryColor: blue;
$navLink: #1565c0;
$navBackground: #e4e9eef2;
$hoverLink: white;
$separatorColor: #b4b4b4;

//old
$veryLight-green-bg: #13d00426;
$navHeight: 70px;
$lightBg: #05dd27ab;
$darkBg: #018903e0;
$lightGreen: #05dd27ab;
$bootstrapSuccess: #28a745;

//new
.active {
  color: $hoverLink !important;
}

.blue {
  color: $primaryColor;
}

//horizontal line color
.separator{
  border:1px solid $separatorColor;
}
.overlay {
  // background: black;
  // opacity: 0.4;
  background: rgb(2, 0, 36);
  background: linear-gradient(
    90deg,
    rgba(2, 0, 36, 1) 0%,
    rgba(9, 6, 6, 0.21939198042498254) 100%,
    rgba(232, 232, 232, 0) 100%
  );
  position: absolute;
  top: 0;
  left: 0;
  height: 65vh;
  width: 100%;
  object-fit: cover;
}

.overlay-2 {
  // background: black;
  // opacity: 0.4;
  background: rgb(2, 0, 36);
  background: linear-gradient(
    90deg,
    rgba(2, 0, 36, 1) 0%,
    rgba(9, 6, 6, 0.21939198042498254) 100%,
    rgba(232, 232, 232, 0) 100%
  );
  position: absolute;
  top: 0;
  left: 0;
  height: 30vh;
  width: 100%;
  object-fit: cover;
}

.textContainer {
  position: absolute;
  top: 15%;
  padding-left: 5%;
  // letter-spacing: 0.2rem;
}

@media (max-width: 700px) {
  .textContainer {
    top: 10%;
    // letter-spacing: normal;
  }
}

.rodacSize {
  // font-size: 4rem;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
}

@media (max-width: 700px) {
  .rodacSize {
    font-size: 2.5rem;
  }
}

.m-top {
  margin-top: 3rem;
}

.m-bottom {
  margin-bottom: 3rem;
}

@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap");
.lead {
  font-family: "Roboto", sans-serif;
  font-size: 2rem;
}

@media (max-width: 700px) {
  .lead {
    font-size: 1rem;
    margin-top: 0;
  }

  .m-top {
    margin-top: 1rem;
  }

  .m-bottom {
    margin-bottom: 1rem;
  }
}

.maxWidth {
  max-width: 80%;
}

.anchor {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

.btn-round {
  padding: 1.5rem;
  border-radius: 100px;
}

@media (max-width: 700px) {
  .btn-round {
    font-size: 0.7rem;
    padding: 1rem;
  }
}

.n-section-title {
  font-size: 3.5rem !important;
  font-weight: 500;
  line-height: 1.5;
}

body {
  font-family: "Roboto", sans-serif !important;
}

.about-us-main {
  font-size: 1.2rem;
  // letter-spacing: 0.1rem;
}

.card-head {
  font-size: 2rem;
  font-weight: 600;
  // letter-spacing: 0.3rem;
}

.margin-round {
  margin-left: 4rem;
  margin-right: 4rem;
  // box-shadow: 15px 15px 20px;
}

.c-shadow {
  box-shadow: 15px 15px 20px;
}

@media (max-width: 700px) {
  .margin-round {
    margin-left: 0.5rem;
    margin-right: 0.5rem;
    // box-shadow: 5px 5px 10px;
  }

  .c-shadow {
    box-shadow: 5px 5px 10px;
  }
}

.img-cli {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.press .press-item {
  opacity: 0.4;
}

.press .press-item:hover {
  opacity: 1;
}

.img-services {
  width: 100%;
  height: 100%;
}

.leadpara {
  // font-size: 1.3rem;
  // letter-spacing: 0.2rem;
  font-weight: 500;
  font-size: 1.0625rem;
}

footer .about {
  color: rgba(255, 255, 255, 0.7);
}

.bg-hero {
  background-color: #000000;
  background-size: cover;
  background-position: center center;
  position: relative;
}

.bg-hero.inverse:before {
  background-color: #01060bd4;
}
.bg-hero:before {
  position: absolute;
  // z-index: 1;
  width: 100%;
  height: 100%;
  display: block;
  left: 0;
  top: 0;
  content: "";
}

.signup-form .form-control {
  padding: 0.7rem 1rem;
}

.form-control {
  display: block;
  width: 100%;
  padding: 0.55rem 1rem;
  font-size: 1.5rem;
  line-height: 2;
  color: #495057;
  background-color: #f8f9fa;
  background-clip: padding-box;
  border: 2px solid #f8f9fa;
  border-radius: 0.25rem;
}

.form-control {
  height: 43px;
  border-radius: 30px;
}
//end of new

.App {
  text-align: center;
}

//set default font
body,
.nav-menu a {
  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol";
}
body {
  // font-size: 0.95rem;
  font-weight: 400;
  // line-height: 1.5;
}
//NAVBAR

//active links
.nav-menu .active,
.nav-menu a:hover {
  color: white;
}
#nav1 {
  height: $navHeight;
}
.navbar {
  opacity: 0.98;
  background-color: $navBackground;
}
.navbar:hover {
  opacity: 1.0;
  // background-color: $navBackground;
}
//set nav links size
.nav-menu a {
  font-weight: 700;
  font-size: 0.95rem;
  color: $navLink;
}

.navbar a {
  text-transform: uppercase;
}
//navbar brand
.navbar .navbar-brand {
  font-size: 1.8rem;
  color: $primaryColor;
}


//old css
#navImg {
  height: $navHeight;
}
.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.product-text {
  display: flex;
  justify-content: center;
  align-items: center;
}

.product-image {
  height: 180px;
  object-fit: contain;
}
.benefits-section .card {
  background-color: transparent;
}

.box-marker:nth-child(even) .benefit-box {
  background-color: $lightGreen;
}

.box-marker:nth-child(odd) .benefit-box {
  background-color: $bootstrapSuccess;
  color: white;
}

.benefit-card {
  background-color: $darkBg;
  color: white;
  border-radius: 0.25rem;
  vertical-align: middle;
}

.order-btn:hover {
  color: white;
}

/* remove padding for nav links when minimized */
@media only screen and (max-width: 990px) {
  .nav-menu a {
    padding: 5px 0 5px 15px !important;
  }
}

#projects-benefits {
  background-color: $veryLight-green-bg;
}

